Versión final del cardview.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="contra">Contraseña:</string>
     <string name="contra2">Introduce tu contraseña...</string>
     <string name="boton">Acceder</string>
+    <string name="yop">acascoc098</string>
+    <string name="minombre">Andrea Castilla Cocera</string>
+    <string name="version">Primera entrega del final project</string>
 </resources>
